ci/ingress.yaml
 # rabbitmq-ui-ingress.yaml 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: spring-search-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: /(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: spring-search-svc
                port: 
                  number: 8082
                  apiVersion: networking.k8s.io/v1
