ci/kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-searchs-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-search-svc
            port:
              number: 8082
